--- a/css/style-msc2006h.css
+++ b/css/style-msc2006h.css
@@ -136,10 +136,12 @@ main section article .inner .txt p {
 
 .select-menu {
     position: relative;
+    width: 300px;
     padding: 20px 0;
     font-family: "proxima-nova", sans-serif;
     font-size: 14px;
     font-weight: 400;
+    z-index: 2;
 }
 
 .select-menu .select-btn {
@@ -152,7 +154,7 @@ main section article .inner .txt p {
     cursor: pointer;
     justify-content: space-between;
     box-shadow: 0 0 5px rgba(0,0,0,0.3);
-    z-index: 2;
+    z-index: 3;
 }
 
 .select-menu .options {
@@ -163,13 +165,42 @@ main section article .inner .txt p {
     background: #fff;
     box-shadow: 0 0 3px rgba(0,0,0,0.1);
     display: none; /* Initially hidden */
-    z-index: 1; /* Ensure options appear below the button */
+    z-index: 2; /* Ensure options appear below the button */
     right: 0; /* Align to the right side of the select button */
 }
 
 .select-menu.active .options {
     display: block; /* Show the dropdown when active */
 }
+
+.select-menu-devLog {
+    position: relative;
+    margin-top: 10px;
+    left:0;
+    padding: 20px 0;
+    font-family: "proxima-nova", sans-serif;
+    font-size: 14px;
+    font-weight: 400;
+    align-items: center; /* Ensure vertical alignment */
+    z-index: 1;
+}
+
+.select-menu-devLog .select-menu {
+    position: relative;
+    left:0;
+}
+
+.select-menu-devLog .options {
+    position: absolute; /* Position the dropdown */
+    padding: 10px;
+    margin-top: 10px;
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: 0 0 3px rgba(0,0,0,0.1);
+    display: none; /* Initially hidden */
+    right: 0; /* Align to the right side of the select button */
+}
+
 
 .options .option {
     display: flex;
